Test modifications and cleanups