@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,9 @@
 
 /*
  * @test
- * @enablePreview
+ * @key randomness
+ *
+ * @library /test/lib
  * @modules jdk.incubator.vector java.base/jdk.internal.vm.annotation
  * @run testng/othervm --add-opens jdk.incubator.vector/jdk.incubator.vector=ALL-UNNAMED
  *      -XX:-TieredCompilation HalffloatMaxVectorLoadStoreTests
@@ -33,10 +35,8 @@
 // -- This file was mechanically generated: Do not edit! -- //
 
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.foreign.ValueLayout;
-import jdk.incubator.vector.Halffloat;
-import jdk.incubator.vector.HalffloatVector;
 import jdk.incubator.vector.HalffloatVector;
 import jdk.incubator.vector.VectorMask;
 import jdk.incubator.vector.VectorShape;
@@ -53,12 +53,12 @@ import java.util.function.*;
 
 @Test
 public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTest {
-    static final VectorSpecies<Halffloat> SPECIES =
+    static final VectorSpecies<Float16> SPECIES =
                 HalffloatVector.SPECIES_MAX;
 
     static final int INVOC_COUNT = Integer.getInteger("jdk.incubator.vector.test.loop-iterations", 100);
 
-    static final ValueLayout.OfShort ELEMENT_LAYOUT = ValueLayout.JAVA_SHORT.withBitAlignment(8);
+    static final ValueLayout.OfShort ELEMENT_LAYOUT = ValueLayout.JAVA_SHORT.withByteAlignment(1);
 
     static VectorShape getMaxBit() {
         return VectorShape.S_Max_BIT;
@@ -257,12 +257,33 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
     }
 
     @DontInline
-    static HalffloatVector fromArray(short[] a, int i) {
-        return HalffloatVector.fromArray(SPECIES, a, i);
+    static VectorShuffle<Float16> shuffleFromArray(int[] a, int i) {
+        return SPECIES.shuffleFromArray(a, i);
     }
 
     @DontInline
-    static HalffloatVector fromArray(short[] a, int i, VectorMask<Halffloat> m) {
+    static void shuffleIntoArray(VectorShuffle<Float16> s, int[] a, int i) {
+        s.intoArray(a, i);
+    }
+
+    @DontInline
+    static VectorShuffle<Float16> shuffleFromMemorySegment(MemorySegment mem, int i, ByteOrder bo) {
+        return VectorShuffle.fromMemorySegment(SPECIES, mem, i, bo);
+    }
+
+    @DontInline
+    static void shuffleIntoMemorySegment(VectorShuffle<Float16> s, MemorySegment mem, int i, ByteOrder bo) {
+        s.intoMemorySegment(mem, i, bo);
+    }
+
+    @DontInline
+    static HalffloatVector fromArray(short[] a, int i) {
+        // Tests the species method and the equivalent vector method it defers to
+        return (HalffloatVector) SPECIES.fromArray(a, i);
+    }
+
+    @DontInline
+    static HalffloatVector fromArray(short[] a, int i, VectorMask<Float16> m) {
         return HalffloatVector.fromArray(SPECIES, a, i, m);
     }
 
@@ -272,17 +293,18 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
     }
 
     @DontInline
-    static void intoArray(HalffloatVector v, short[] a, int i, VectorMask<Halffloat> m) {
+    static void intoArray(HalffloatVector v, short[] a, int i, VectorMask<Float16> m) {
         v.intoArray(a, i, m);
     }
 
     @DontInline
     static HalffloatVector fromMemorySegment(MemorySegment a, int i, ByteOrder bo) {
-        return HalffloatVector.fromMemorySegment(SPECIES, a, i, bo);
+        // Tests the species method and the equivalent vector method it defers to
+        return (HalffloatVector) SPECIES.fromMemorySegment(a, i, bo);
     }
 
     @DontInline
-    static HalffloatVector fromMemorySegment(MemorySegment a, int i, ByteOrder bo, VectorMask<Halffloat> m) {
+    static HalffloatVector fromMemorySegment(MemorySegment a, int i, ByteOrder bo, VectorMask<Float16> m) {
         return HalffloatVector.fromMemorySegment(SPECIES, a, i, bo, m);
     }
 
@@ -292,7 +314,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
     }
 
     @DontInline
-    static void intoMemorySegment(HalffloatVector v, MemorySegment a, int i, ByteOrder bo, VectorMask<Halffloat> m) {
+    static void intoMemorySegment(HalffloatVector v, MemorySegment a, int i, ByteOrder bo, VectorMask<Float16> m) {
         v.intoMemorySegment(a, i, bo, m);
     }
 
@@ -370,7 +392,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
         short[] a = fa.apply(SPECIES.length());
         short[] r = new short[a.length];
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromValues(SPECIES, mask);
+        VectorMask<Float16> vmask = VectorMask.fromValues(SPECIES, mask);
 
         for (int ic = 0; ic < INVOC_COUNT; ic++) {
             for (int i = 0; i < a.length; i += SPECIES.length()) {
@@ -397,7 +419,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
         short[] a = fa.apply(SPECIES.length());
         short[] r = new short[a.length];
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromValues(SPECIES, mask);
+        VectorMask<Float16> vmask = VectorMask.fromValues(SPECIES, mask);
 
         for (int ic = 0; ic < INVOC_COUNT; ic++) {
             for (int i = 0; i < a.length; i += SPECIES.length()) {
@@ -425,7 +447,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
         short[] a = fa.apply(SPECIES.length());
         short[] r = new short[a.length];
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromValues(SPECIES, mask);
+        VectorMask<Float16> vmask = VectorMask.fromValues(SPECIES, mask);
 
         for (int ic = 0; ic < INVOC_COUNT; ic++) {
             for (int i = 0; i < a.length; i += SPECIES.length()) {
@@ -458,7 +480,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
 
         for (int ic = 0; ic < INVOC_COUNT; ic++) {
             for (int i = 0; i < mask.length; i += SPECIES.length()) {
-                VectorMask<Halffloat> vmask = VectorMask.fromArray(SPECIES, mask, i);
+                VectorMask<Float16> vmask = VectorMask.fromArray(SPECIES, mask, i);
                 vmask.intoArray(r, i);
             }
         }
@@ -488,8 +510,8 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
 
     @Test(dataProvider = "shortByteProviderForIOOBE")
     static void loadMemorySegmentIOOBE(IntFunction<short[]> fa, IntFunction<Integer> fi) {
-        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> MemorySegment.allocateNative(i, Halffloat.SIZE, SegmentScope.auto()));
-        MemorySegment r = MemorySegment.allocateNative(a.byteSize(), Halffloat.SIZE, SegmentScope.auto());
+        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> Arena.ofAuto().allocate(i, Float16.SIZE));
+        MemorySegment r = Arena.ofAuto().allocate(a.byteSize(), Float16.SIZE);
 
         int l = (int) a.byteSize();
         int s = SPECIES.vectorByteSize();
@@ -517,8 +539,8 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
 
     @Test(dataProvider = "shortByteProviderForIOOBE")
     static void storeMemorySegmentIOOBE(IntFunction<short[]> fa, IntFunction<Integer> fi) {
-        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> MemorySegment.allocateNative(i, Halffloat.SIZE, SegmentScope.auto()));
-        MemorySegment r = MemorySegment.allocateNative(a.byteSize(), Halffloat.SIZE, SegmentScope.auto());
+        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> Arena.ofAuto().allocate(i, Float16.SIZE));
+        MemorySegment r = Arena.ofAuto().allocate(a.byteSize(), Float16.SIZE);
 
         int l = (int) a.byteSize();
         int s = SPECIES.vectorByteSize();
@@ -554,7 +576,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
         MemorySegment a = toSegment(_a, fb);
         MemorySegment r = fb.apply((int) a.byteSize());
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromValues(SPECIES, mask);
+        VectorMask<Float16> vmask = VectorMask.fromValues(SPECIES, mask);
 
         int l = (int) a.byteSize();
         int s = SPECIES.vectorByteSize();
@@ -581,10 +603,10 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
 
     @Test(dataProvider = "shortByteMaskProviderForIOOBE")
     static void loadMemorySegmentMaskIOOBE(IntFunction<short[]> fa, IntFunction<Integer> fi, IntFunction<boolean[]> fm) {
-        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> MemorySegment.allocateNative(i, Halffloat.SIZE, SegmentScope.auto()));
-        MemorySegment r = MemorySegment.allocateNative(a.byteSize(), Halffloat.SIZE, SegmentScope.auto());
+        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> Arena.ofAuto().allocate(i, Float16.SIZE));
+        MemorySegment r = Arena.ofAuto().allocate(a.byteSize(), Float16.SIZE);
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromValues(SPECIES, mask);
+        VectorMask<Float16> vmask = VectorMask.fromValues(SPECIES, mask);
 
         int l = (int) a.byteSize();
         int s = SPECIES.vectorByteSize();
@@ -612,10 +634,10 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
 
     @Test(dataProvider = "shortByteMaskProviderForIOOBE")
     static void storeMemorySegmentMaskIOOBE(IntFunction<short[]> fa, IntFunction<Integer> fi, IntFunction<boolean[]> fm) {
-        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> MemorySegment.allocateNative(i, Halffloat.SIZE, SegmentScope.auto()));
-        MemorySegment r = MemorySegment.allocateNative(a.byteSize(), Halffloat.SIZE, SegmentScope.auto());
+        MemorySegment a = toSegment(fa.apply(SPECIES.length()), i -> Arena.ofAuto().allocate(i, Float16.SIZE));
+        MemorySegment r = Arena.ofAuto().allocate(a.byteSize(), Float16.SIZE);
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromValues(SPECIES, mask);
+        VectorMask<Float16> vmask = VectorMask.fromValues(SPECIES, mask);
 
         int l = (int) a.byteSize();
         int s = SPECIES.vectorByteSize();
@@ -663,7 +685,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
                 () -> SPECIES.zero().intoMemorySegment(a, 0, bo, SPECIES.maskAll(false))
         );
 
-        VectorMask<Halffloat> m = SPECIES.shuffleFromOp(i -> i % 2 == 0 ? 1 : -1)
+        VectorMask<Float16> m = SPECIES.shuffleFromOp(i -> i % 2 == 0 ? 1 : -1)
                 .laneIsValid();
         Assert.assertThrows(
                 UnsupportedOperationException.class,
@@ -679,7 +701,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
 
         for (int ic = 0; ic < INVOC_COUNT; ic++) {
             for (int i = 0; i < a.length; i += SPECIES.length()) {
-                VectorMask<Halffloat> vmask = SPECIES.loadMask(a, i);
+                VectorMask<Float16> vmask = SPECIES.loadMask(a, i);
                 vmask.intoArray(r, i);
             }
         }
@@ -687,18 +709,161 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
     }
 
 
-    @Test
-    static void loadStoreShuffle() {
-        IntUnaryOperator fn = a -> a + 5;
-        for (int ic = 0; ic < INVOC_COUNT; ic++) {
-            var shuffle = VectorShuffle.fromOp(SPECIES, fn);
-            int [] r = shuffle.toArray();
+   @Test(dataProvider = "shuffleIntProvider")
+   static void loadStoreShuffleArray(IntFunction<int[]> fa) {
+       int[] a = fa.apply(SPECIES.length());
+       int[] r = new int[a.length];
 
-            int [] a = expectedShuffle(SPECIES.length(), fn);
-            Assert.assertEquals(r, a);
+       for (int ic = 0; ic < INVOC_COUNT; ic++) {
+           for (int i = 0; i < a.length; i += SPECIES.length()) {
+               VectorShuffle<Float16> shuffle = VectorShuffle.fromArray(SPECIES, a, i);
+               shuffle.intoArray(r, i);
+           }
        }
-    }
 
+       for (int i = 0; i < a.length; i++) {
+          Assert.assertEquals(testPartiallyWrapIndex(SPECIES, a[i]), r[i]);
+       }
+
+   }
+
+   @Test(dataProvider = "shuffleIntProviderForIOOBE")
+   static void storeShuffleArrayIOOBE(IntFunction<int[]> fa, IntFunction<Integer> fi) {
+       int[] a = fa.apply(SPECIES.length());
+       int[] r = new int[a.length];
+
+       for (int ic = 0; ic < INVOC_COUNT; ic++) {
+           for (int i = 0; i < a.length; i += SPECIES.length()) {
+               VectorShuffle<Float16> shuffle = shuffleFromArray(a, i);
+               shuffleIntoArray(shuffle, r, i);
+           }
+       }
+
+       int index = fi.apply(a.length);
+       boolean shouldFail = isIndexOutOfBounds(SPECIES.length(), index, a.length);
+       try {
+           VectorShuffle<Float16> shuffle = shuffleFromArray(a, index);
+           shuffleIntoArray(shuffle, r, index);
+           if (shouldFail) {
+               Assert.fail("Failed to throw IndexOutOfBoundsException");
+           }
+       } catch (IndexOutOfBoundsException e) {
+           if (!shouldFail) {
+               Assert.fail("Unexpected IndexOutOfBoundsException");
+           }
+       }
+   }
+
+   @Test(dataProvider = "shuffleIntProviderForIOOBE")
+   static void loadShuffleArrayIOOBE(IntFunction<int[]> fa, IntFunction<Integer> fi) {
+       int[] a = fa.apply(SPECIES.length());
+       int[] r = new int[a.length];
+
+       for (int ic = 0; ic < INVOC_COUNT; ic++) {
+           for (int i = 0; i < a.length; i += SPECIES.length()) {
+               VectorShuffle<Float16> shuffle = shuffleFromArray(a, i);
+               shuffle.intoArray(r, i);
+           }
+       }
+
+       int index = fi.apply(a.length);
+       boolean shouldFail = isIndexOutOfBounds(SPECIES.length(), index, a.length);
+       try {
+           shuffleFromArray(a, index);
+           if (shouldFail) {
+               Assert.fail("Failed to throw IndexOutOfBoundsException");
+           }
+       } catch (IndexOutOfBoundsException e) {
+           if (!shouldFail) {
+               Assert.fail("Unexpected IndexOutOfBoundsException");
+           }
+       }
+   }
+
+   @Test(dataProvider = "shuffleIntMemorySegmentProvider")
+   static void loadStoreShuffleMemorySegment(IntFunction<int[]> fa,
+                                      IntFunction<MemorySegment> fb,
+                                      ByteOrder bo) {
+       MemorySegment a = toShuffleSegment(SPECIES, fa.apply(SPECIES.length()), fb);
+       MemorySegment r = fb.apply((int) a.byteSize());
+
+       int l = (int) a.byteSize();
+       int s = SPECIES.length() * 4; //An integer for every lane is read out. So 4 bytes per lane
+
+       for (int ic = 0; ic < INVOC_COUNT; ic++) {
+           for (int i = 0; i < l; i += s) {
+               VectorShuffle<Float16> shuffle = VectorShuffle.fromMemorySegment(SPECIES, a, i, bo);
+               shuffle.intoMemorySegment(r, i, bo);
+           }
+       }
+
+       for (int i = 0; i < l / 4; i++) {
+           int ai = a.getAtIndex(ValueLayout.JAVA_INT_UNALIGNED.withOrder(bo), i);
+           int ri = r.getAtIndex(ValueLayout.JAVA_INT_UNALIGNED.withOrder(bo), i);
+           Assert.assertEquals(testPartiallyWrapIndex(SPECIES, ai), ri);
+       }
+   }
+
+   @Test(dataProvider = "shuffleIntByteProviderForIOOBE")
+   static void shuffleLoadMemorySegmentIOOBE(IntFunction<int[]> fa, IntFunction<Integer> fi) {
+       MemorySegment a = toShuffleSegment(SPECIES, fa.apply(SPECIES.length()), i -> Arena.ofAuto().allocate(i));
+       MemorySegment r = Arena.ofAuto().allocate(a.byteSize());
+
+       int l = (int) a.byteSize();
+       int s = SPECIES.length() * 4;
+
+       for (int ic = 0; ic < INVOC_COUNT; ic++) {
+           for (int i = 0; i < l; i += s) {
+               VectorShuffle<Float16> shuffle = shuffleFromMemorySegment(a, i, ByteOrder.nativeOrder());
+               shuffle.intoMemorySegment(r, i, ByteOrder.nativeOrder());
+           }
+       }
+
+       int index = fi.apply((int) a.byteSize());
+       boolean shouldFail = isIndexOutOfBounds(s, index, (int) a.byteSize());
+       try {
+           shuffleFromMemorySegment(a, index, ByteOrder.nativeOrder());
+           if (shouldFail) {
+               Assert.fail("Failed to throw IndexOutOfBoundsException");
+           }
+       } catch (IndexOutOfBoundsException e) {
+           if (!shouldFail) {
+               Assert.fail("Unexpected IndexOutOfBoundsException");
+           }
+       }
+   }
+
+   @Test(dataProvider = "shuffleIntByteProviderForIOOBE")
+   static void shuffleStoreMemorySegmentIOOBE(IntFunction<int[]> fa, IntFunction<Integer> fi) {
+       MemorySegment a = toShuffleSegment(SPECIES, fa.apply(SPECIES.length()), i -> Arena.ofAuto().allocate(i));
+       MemorySegment r = Arena.ofAuto().allocate(a.byteSize());
+
+       int l = (int) a.byteSize();
+       int s = SPECIES.length() * 4;
+
+       for (int ic = 0; ic < INVOC_COUNT; ic++) {
+           for (int i = 0; i < l; i += s) {
+               VectorShuffle<Float16> shuffle =
+                       VectorShuffle.fromMemorySegment(SPECIES, a, i, ByteOrder.nativeOrder());
+               shuffleIntoMemorySegment(shuffle, r, i, ByteOrder.nativeOrder());
+           }
+       }
+
+       int index = fi.apply((int) a.byteSize());
+       boolean shouldFail = isIndexOutOfBounds(s, index, (int) a.byteSize());
+       try {
+           VectorShuffle<Float16> shuffle =
+                   VectorShuffle.fromMemorySegment(SPECIES, a, 0, ByteOrder.nativeOrder());
+           shuffleIntoMemorySegment(shuffle, r, index, ByteOrder.nativeOrder());
+           if (shouldFail) {
+               Assert.fail("Failed to throw IndexOutOfBoundsException");
+           }
+       } catch (IndexOutOfBoundsException e) {
+           if (!shouldFail) {
+               Assert.fail("Unexpected IndexOutOfBoundsException");
+           }
+       }
+   }
 
 
 
@@ -805,7 +970,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
         int[] b = fs.apply(a.length, SPECIES.length());
         short[] r = new short[a.length];
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromArray(SPECIES, mask, 0);
+        VectorMask<Float16> vmask = VectorMask.fromArray(SPECIES, mask, 0);
 
         for (int ic = 0; ic < INVOC_COUNT; ic++) {
             for (int i = 0; i < a.length; i += SPECIES.length()) {
@@ -839,7 +1004,7 @@ public class HalffloatMaxVectorLoadStoreTests extends AbstractVectorLoadStoreTes
         int[] b = fs.apply(a.length, SPECIES.length());
         short[] r = new short[a.length];
         boolean[] mask = fm.apply(SPECIES.length());
-        VectorMask<Halffloat> vmask = VectorMask.fromArray(SPECIES, mask, 0);
+        VectorMask<Float16> vmask = VectorMask.fromArray(SPECIES, mask, 0);
 
         for (int ic = 0; ic < INVOC_COUNT; ic++) {
             for (int i = 0; i < a.length; i += SPECIES.length()) {
